<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guessit.guessit.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp">


    <Button
        android:id="@+id/viewScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="Score"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/viewHintButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="Hint"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/viewScoreButton"
        android:layout_toStartOf="@+id/viewScoreButton" />


        <TextView
            android:text="Select a Faction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="36sp"
            android:layout_marginTop="11dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="Humans"
            android:layout_width="208dp"
            android:id="@+id/button5"
            android:layout_centerInParent="false"
            android:elevation="6dp"
            android:layout_height="100dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:onClick="humanFaction"
            android:layout_marginBottom="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4" />

        <Button
            android:text="Monsters"
            android:layout_width="208dp"
            android:id="@+id/button4"
            android:layout_centerInParent="false"
            android:elevation="6dp"
            android:layout_height="100dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="monsterFaction"
            android:layout_above="@+id/button5"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp" />

        <Button
            android:text="Ready"
            android:id="@+id/button_toHintGiver"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:onClick="hintAct"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">
            <Button
                android:text="Set a hint"
                android:id="@+id/button_setHint"
                android:layout_marginTop="-5dip"
                android:layout_marginRight="-5dip"
                android:onClick="hintAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:text="Hint"
                android:id="@+id/button_hint"
                android:layout_marginTop="-5dip"
                android:layout_marginRight="-5dip"
                android:onClick="hintAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
