...
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/monster8"
        android:id="@+id/imageButton3"
        android:layout_marginTop="14dp"
        android:onClick="goToWaitingPage3"
        android:layout_below="@+id/imageButton"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
...
